# darwin

./: .gitignore  LICENSE  README.md  SECURITY.md  install.sh  uninstall.sh
.github/workflows/: release.yml
apps/algo-core/: SPEC.md  manifest.toml
apps/cidrtool/: main.py  test_cidrtool.py
apps/example-plugin/: main.py  manifest.toml
apps/fab-link/: SPEC.md  manifest.toml
apps/freqwave/: main.py  test_freqwave.py
apps/global-scan/: README.md  feeds.toml  main.py  manifest.toml  test_global_scan.py
apps/mark-forge/: Cargo.toml  SPEC.md  manifest.toml
apps/mark-forge/src/: body.rs  broadphase.rs  error.rs  ipc.rs  lib.rs  main.rs  math.rs  narrowphase.rs  solver.rs  world.rs
apps/mark-forge/tests/: math_verify.rs
apps/nexus/: SPEC.md  main.py  manifest.toml  signal_proof.py  test_main.py
apps/nexus/core/: Cargo.toml
apps/nexus/core/src/: coreaudio.rs  dsp.rs  engine.rs  error.rs  ffi.rs  lib.rs  matrix.rs  metering.rs  types.rs
apps/nexus/core/tests/: matrix_state.rs
apps/ohmslaw/: main.py  test_ohmslaw.py
apps/portref/: main.py  manifest.toml
apps/regexpad/: main.py  test_regexpad.py
apps/share-guard/: Info.plist  Package.swift  SPEC.md  manifest.toml
apps/silicon-canvas/: Cargo.toml  SPEC.md  manifest.toml
apps/silicon-canvas/fuzz/: .gitignore  Cargo.toml
apps/silicon-canvas/fuzz/fuzz_targets/: parse_document.rs
apps/silicon-canvas/src/: erc.rs  error.rs  graph.rs  ids.rs  ipc.rs  lib.rs  main.rs  ops.rs  parser.rs  render.rs  rtree.rs  scene.rs  sexpr.rs  trace.rs
apps/subnetcalc/: main.py  test_subnetcalc.py
apps/unitwise/: main.py  test_unitwise.py
apps/urlparse/: main.py  test_urlparse.py
apps/vision/: Info.plist  Package.swift  manifest.toml  vision
boot/: com.darwin.hud.plist  com.jarvis.daemon.plist  com.jarvis.inference.plist  run_daemon.sh  run_inference.sh
config/: agents.toml  darwin.toml  jarvis.toml
daemon/: Cargo.toml
daemon/src/: actions.rs  agents.rs  anthropic.rs  anticipate.rs  aperture.rs  apps.rs  attribution.rs  audio.rs  audit.rs  boundary.rs  brief.rs  calibrate.rs  capability.rs  chart.rs  code.rs  command.rs  config.rs  confirm.rs  connector.rs  crypto.rs  diarize.rs  distill.rs  docsearch.rs  drafts.rs  durable_missions.rs  egress.rs  egress_beacon.rs  enclave.rs  episodic.rs  eval.rs  explain.rs  fetchproxy.rs  fleet.rs  focus.rs  forecast.rs  forge.rs  genproxy.rs  heal.rs  inference.rs  interception.rs  (+56 more)
daemon/src/integrations/: github.rs  google_ads.rs  google_calendar.rs  google_drive.rs  google_gmail.rs  google_oauth.rs  hibp.rs  linkedin.rs  maps.rs  meta_ads.rs  mod.rs  oauth2.rs  plaid.rs  slack.rs  smarthome.rs  whoop.rs  x_social.rs
daemon/src/skills/: datetime.rs  finance.rs  fun.rs  knowledge.rs  mathx.rs  mod.rs  text.rs  units.rs  utilities.rs
docs/: ARCHITECTURE.md  BRINGUP.md  HUD.md  INTROSPECT.md  OS_CAPABILITIES.md  PLUGIN_SDK.md  ROADMAP.md  SANDBOX.md  SKILLS.md
hud/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
hud/src/: App.tsx  main.tsx  styles.css
hud/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
hud/src-tauri/capabilities/: default.json
hud/src-tauri/src/: command.rs  config_settings.rs  credentials.rs  heal.rs  lib.rs  main.rs  mic_stream.rs  permissions.rs  setup.rs  takeover.rs  tcc.rs  updates.rs
hud/src/components/: AboutPanel.tsx  ActionPanel.tsx  AgentPanel.tsx  AlertPanel.tsx  AnswerCrossCheckPanel.tsx  AnswerSourcesPanel.tsx  AperturePanel.tsx  AppDeckPanel.tsx  AttributionHealthPanel.tsx  AudioIoPanel.tsx  AuditPanel.tsx  BootReveal.tsx  BriefFocusPanel.tsx  CapHitIndicator.tsx  CapabilityStatusPanel.tsx  CausaTracePanel.tsx  ChartPanel.tsx  CodeIntelPanel.tsx  CommandDeck.tsx  CommandPalette.tsx  ConduitField.tsx  CoreHud.tsx  CustomsPanel.tsx  DiagnosticsPanel.tsx  DocSearchPanel.tsx  EvalPanel.tsx  ExtensibilityPanel.tsx  FirstRunSetup.tsx  FleetPanel.tsx  ForgePanel.tsx  Frame.tsx  GlobalScanPanel.tsx  ImagePanel.tsx  InferencePerfPanel.tsx  IntrospectPanel.tsx  KnowledgeGraphPanel.tsx  LatencyStrip.tsx  LifeLogPanel.tsx  MarkForgePanel.tsx  McpPanel.tsx  (+27 more)
hud/src/core/: about.ts  agents.ts  audioStore.ts  credentials.ts  deck.ts  events.ts  firstRunSetup.ts  heal.ts  kgLayout.ts  music.ts  onboarding.ts  palette.ts  perf.ts  permissions.ts  procwatch.ts  sfxCue.ts  state.ts  systemSettings.ts  takeover.ts  visuals.ts  vitals.ts  voiceLab.ts
hud/src/tauri/: bridge.ts  command.ts  configSettings.ts  takeover.ts
hud/src/test/: about.test.ts  action-panel.test.ts  agents.test.ts  answer-annotations.test.ts  answer-crosscheck.test.ts  aperture.test.ts  app-deck.test.ts  attribution-health.test.ts  audioStore.test.ts  audioio.test.ts  audit-policy.test.ts  brief-focus.test.ts  capabilityMap.test.ts  causa.test.ts  chart.test.ts  client.test.ts  code-intel.test.ts  command-deck.test.ts  command-palette.test.ts  credentials.test.ts  customs.test.ts  deck.test.ts  eval.test.ts  (+51 more)
inference/: benchmark.py  coreml_embed.py  coreml_vad.py  deploy_models.py  requirements.txt  server.py  test_benchmark.py  test_coreml_embed.py  test_coreml_vad.py  test_describe_image.py  test_embed_pool.py  test_generate_image.py  test_local_warm.py  test_music.py  test_peer_cancel.py  test_pronunciation.py  test_stream_tts.py  test_voice_build2.py  test_voice_tier.py  test_voicedesign.py  tts_eval.py
inference/benchmarks/: baseline_m1_pro.json
inference/personas/: aegis.txt  athena.txt  babel.txt  cassandra.txt  dume.txt  edith.txt  friday.txt  fury.txt  gecko.txt  herald.txt  hercules.txt  hulk.txt  jarvis.txt  jerome.txt  karen.txt  midas.txt  mnemosyne.txt  oracle.txt  pepper.txt  sage.txt  stark.txt  steve.txt  ultron.txt  veronica.txt  vision.txt  vitalis.txt  voyager.txt
inference/prompts/: intent_classifier.txt  persona.txt
scripts/: ane_probe.py  apply_code_diff.sh  apply_forge.sh  apply_heal.sh  apply_optimization.sh  greeting_probe.py  hud_demo_feed.py  init_memory.py  install_boot.sh  test_apply_code_diff_confinement.sh  test_apply_heal_confinement.sh  test_shell_sandbox.sh  ui.sh  uninstall_boot.sh
(+46 files in other folders)
